--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Simplex : A PowerShell module used to create PowerShell providers using a simple DSL.">
+    <title>Simplex by beefarino</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Simplex</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Simplex</h1>
+        <p>A PowerShell module used to create PowerShell providers using a simple DSL.</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/beefarino/simplex">View on GitHub</a>
+        <p class="view"><a href="https://github.com/beefarino/simplex">View the Project on GitHub <small>beefarino/simplex</small></a></p>
 
-          <h1 id="project_title">Simplex</h1>
-          <h2 id="project_tagline">A PowerShell module used to create PowerShell providers using a simple DSL.</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/beefarino/simplex/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/beefarino/simplex/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/beefarino/simplex/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/beefarino/simplex/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/beefarino/simplex">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <p><a href="https://ci.appveyor.com/project/beefarino/simplex"><img src="https://ci.appveyor.com/api/projects/status/m7j0i2p0iue5gpaw?svg=true" alt="Build status"></a></p>
 
 <h1>
@@ -114,17 +111,12 @@ dir</pre></div>
     }
 }</pre></div>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Simplex maintained by <a href="https://github.com/beefarino">beefarino</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/beefarino">beefarino</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
